---
source: src/parser/statement.rs
expression: "parse_stmt(\"try { something; } finally {}\".into()).unwrap().1"
---
{
  "type": "TryStatement",
  "block": {
    "type": "BlockStatement",
    "body": [
      {
        "type": "ExpressionStatement",
        "expression": {
          "type": "Identifier",
          "name": "something",
          "start": 6,
          "end": 15
        },
        "start": 6,
        "end": 16
      }
    ],
    "start": 4,
    "end": 18
  },
  "handler": null,
  "finalizer": {
    "type": "BlockStatement",
    "body": [],
    "start": 27,
    "end": 29
  },
  "start": 0,
  "end": 29
}
